k8s/staging/service-staging.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dnds-bo
  namespace: staging-dnds-bo
  labels:
    app: dnds-bo
spec:
  selector:
    app: dnds-bo
  ports:
    - name: dndsbo
      port: 80
      targetPort: 80
  type: ClusterIP
