k8s/staging/ingress-staging.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dnds-bo
  namespace: staging-dnds-bo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - dnds-bo-staging.iconkaset.com
      secretName: dnds-bo-staging-cert
  rules:
    - host: dnds-bo-staging.iconkaset.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dnds-bo
                port:
                  name: dndsBo
